# mewbot-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: update-version.ps1
src/: main.rs  updater.rs  wallet_store.rs
src/cli/: mod.rs
src/commands/: flashback.rs  help.rs  leave.rs  lofi.rs  mod.rs  wallet.rs
src/config/: mod.rs
src/context/: mod.rs
src/core/: command.rs  context.rs  mod.rs  plugin_api.rs  registry.rs  updater.rs
src/core/config/: mod.rs
src/core/data/: mod.rs
src/core/events/: interaction.rs  message.rs  ready.rs
src/core/permissions/: mod.rs
src/core/utils/: logger.rs  mod.rs
src/events/: interaction.rs  message.rs  mod.rs  ready.rs
src/permissions/: mod.rs
src/plugins/: mod.rs
src/plugins/help/: command.rs  mod.rs
src/plugins/wallet/: command.rs  mod.rs  store.rs
src/registry/: mod.rs
src/utils/: logger.rs  mod.rs
