[package]
name = "mewbot-rust"
version = "0.2.0"
edition = "2021"
authors = ["Mew"]
description = "A Discord bot built with Rust using the Serenity framework. Supports both slash commands and prefix commands with cooldowns, auto-reload in dev mode, and a dynamic help system."
license = "MIT"
repository = "https://github.com/mewisme/mewbot-rust"

[dependencies]
serenity = { version = "^0.12.4", features = [
  "builder",
  "chrono",
  "client",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "utils",
  "rustls_backend",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
notify = "6.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
songbird = "0.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
