[package]
name = "mewbot"
version = "0.3.4"
edition = "2021"
authors = ["Mew"]
description = "A Discord bot built with Rust using the Serenity framework. Supports both slash commands and prefix commands with cooldowns and a dynamic help system."
license = "MIT"
repository = "https://github.com/mewisme/mewbot"

[dependencies]
serenity = { version = "^0.12.4", features = [
  "builder",
  "chrono",
  "client",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "utils",
  "rustls_backend",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
self-replace = "1.5"
sha2 = "0.10"

# Release build: smallest binary size
[profile.release]
opt-level = "z"   # optimize for size (no loop vectorization)
lto = true        # link-time optimization
codegen-units = 1 # better optimization, slower compile
strip = true      # strip symbols (binary only)
panic = "abort"   # no unwinding = smaller binary
debug = false     # no debug info
